syntax = "proto3";

option csharp_namespace = "GrpcCart";

package CartApi;

service CartGrps {
	rpc GetCartById(CartRequest) returns (CustomerCartResponse) {}
	rpc UpdateCart(CustomerCartRequest) returns (CustomerCartResponse) {}
}

message CartRequest {
	string id = 1;
}

message CustomerCartRequest {
	string buyerid = 1;
	repeated CartItemResponse items = 2;
}

message CustomerCartResponse {
	string buyerid = 1;
	repeated CartItemResponse items = 2;
}

message CartItemResponse {
	string id = 1;
	int32 productid = 2;
	string productname = 3;
	double unitprice = 4;
	double oldunitprice = 5;
	int32 quantity = 6;
	string pictureurl = 7;
}